--- a/rust/wasm/part_2/rogue_wasm/app/package.json
+++ b/rust/wasm/part_2/rogue_wasm/app/package.json
@@ -14,6 +14,15 @@
     "workers": "file:../workers"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.0",
+    "@babel/plugin-transform-runtime": "^7.12.0",
+    "@babel/preset-env": "^7.12.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.12.0",
+    "@babel/runtime": "^7.12.0",
+    "@types/webpack": "^4.41.22",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.1.0",
     "ts-loader": "^8.0.5",
     "typescript": "^4.0.3",
     "webpack": "^5.1.0",
