--- a/rust/wasm/part_2/rogue_wasm/app/tsconfig.json
+++ b/rust/wasm/part_2/rogue_wasm/app/tsconfig.json
@@ -1,12 +1,23 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2015",
-        "declaration": true,
-        "jsx": "react",
-        "outDir": "./dist"
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react"
     },
     "include": [
-        "src/**/*"
-    ]
+        "./src/**/*"
+    ],
 }
