--- a/rust/wasm/part_2/rogue_wasm/app/package.json
+++ b/rust/wasm/part_2/rogue_wasm/app/package.json
@@ -22,7 +22,16 @@
     "@babel/runtime": "^7.12.0",
     "@types/webpack": "^4.41.22",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.4",
+    "prettier": "^2.1.2",
     "ts-loader": "^8.0.5",
     "typescript": "^4.0.3",
     "webpack": "^5.1.0",
