--- a/rust/wasm/part_2/rogue_wasm/wasm-functions/Cargo.toml
+++ b/rust/wasm/part_2/rogue_wasm/wasm-functions/Cargo.toml
@@ -12,6 +12,10 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
+serde="1.0.117"
+serde_derive = "1.0.117"
+
+
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
